--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,8 +2,8 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/header_one.jpg
-  title: Elliot Alderson
+- src: landing/header_one.gif
+  title: We are making world Automated
 
-- src: landing/header_two.jpg
-  title: Second banner image
+- src: landing/header_two.png
+  title: Nodes of community
