--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -4,7 +4,8 @@
     detail: Red Hat
     i18n: company_a
   desc:
-    detail: I am working  as an Inter At Red Hat
+    detail: I worked as an Inter At Red Hat, Pune
+    img: http://www.stickpng.com/img/icons-logos-emojis/tech-companies/redhat-logo
     i18n: Red Hat, Inc. is an American multinational software company providing open-source software products to the enterprise community.
   date:
     detail: July. 2018
