certs link added

--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -4,7 +4,7 @@
   desc: President RITINLUG
   website: https://saurabhlondhe.github.io
   email: saurabhlondhe1111@gmail.com
-
+  certs: /certificates
 #- last_name: Londhe
 #  first_name: Saurabh
 #  desc: Github
