--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -31,8 +31,15 @@
   page: blog/
   css: testimonials navy-section
 
-- id: links
-  i18n: nav.link
-  name: Links
-  tpl: links.html
-  css: contact
+
+- id: certificates
+  i18n: nav.certificates
+  name: Certificates
+  tpl: certificates/
+#  css: contact
+
+#- id: links
+#  i18n: nav.link
+#  name: Links
+#  tpl: links.html
+#  css: contact
