--- a/_data/index/course.yml
+++ b/_data/index/course.yml
@@ -14,10 +14,10 @@
   icon: fa icon-python
 
 - name:
-    detail: Python3 Tutorial
+    detail: Sololearn
     i18n: company_a
   desc:
-    detail: 
+    detail: <ul><li><b>Python3 Tutorial</b></li><li><b>Java Tutorial</b></li><li><b>HTML Fundamentals</b></li><li><b>C++ Tutorials</b></li></ul>
     i18n: 
   date:
     detail: August 2017
@@ -26,49 +26,4 @@
     detail: Sololearn
     url: /static/assets/img/landing/solo.jpg
     i18n: company_a_job
-  icon: fa icon-python
-
-- name:
-    detail: Java Tutorial
-    i18n: company_a
-  desc:
-    detail: 
-    i18n: 
-  date:
-    detail: August 2017
-    i18n: company_a_date
-  provider:
-    detail: Sololearn
-    url: /static/assets/img/landing/solo.jpg
-    i18n: company_a_job
-  icon: fa icon-java
-
-- name:
-    detail: HTML Fundamentals
-    i18n: company_a
-  desc:
-    detail: 
-    i18n: 
-  date:
-    detail: August 2017
-    i18n: company_a_date
-  provider:
-    detail: Sololearn
-    url: /static/assets/img/landing/solo.jpg
-    i18n: company_a_job
-  icon: fa icon-html
-
-- name:
-    detail: C++ Tutorials
-    i18n: company_a
-  desc:
-    detail: 
-    i18n: 
-  date:
-    detail: August 2017
-    i18n: company_a_date
-  provider:
-    detail: Sololearn
-    url: /static/assets/img/landing/solo.jpg
-    i18n: company_a_job
-  icon: fa icon-c
+  icon: fa fa-graduation-cap
