--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -2,8 +2,8 @@
 # Add items for each banner image in the carousel
 #
 # Images are expected to be located in `static/assets/img/`.
-- src: landing/header_one.gif
+- src: landing/header_one.jpg
   title: We are making world Automated
 
-- src: landing/header_two.jpg
+- src: landing/header_two.gif
   title: Nodes of community
