--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 # Website settings
 title: Saurabh Londhe
-description: Saurabh Londhe's Blog and github pages.
+description: Saurabh Londhe's Personal blogs.
 keywords: Saurabh,saurabhlondhe,blog,Jekyll,github,gh-pages
 baseurl:  / # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
 url: https://saurabhlondhe.github.io/  # url should be 'http://<github_username>.github.io/homepage' as before
