added 3rd banner image

--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -5,5 +5,8 @@
 - src: landing/header_one.jpg
   title: We are making world Automated
 
+  - src: landing/header_three.gif
+  title: 
+
 - src: landing/header_two.gif
   title: Nodes of community
