--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -6,7 +6,7 @@
   title: We are making world Automated
 
   - src: landing/header_three.gif
-  title: 
+  title: look near
 
 - src: landing/header_two.gif
   title: Nodes of community
