--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -33,8 +33,7 @@
 - id: blog
   i18n: nav.blog
   name: Blog
-  tpl: blog.html
-  page: blog/
+  page: blogs/
   css: testimonials navy-section
 
 - id: links
