--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -5,7 +5,7 @@
     i18n: company_a
     logo: /static/assets/img/landing/emtec.png
   desc:
-    detail: Working as an Intern for software development.
+    detail: Working as an Intern for software development. Worked on various technologies like Angular, AWS, AZURE, Docker, Spring Boot, etc.. 
     i18n: company_a_desc
   date:
     detail: Dec. 2018 - present
