--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -35,7 +35,7 @@
     i18n: company_c
     logo: /static/assets/img/landing/rit.jpg
   desc:
-    detail: In 2019 will complete my graduation as a Bachelor of Technology in Computer Science and Enginnering. <br><ul><li>First Year :- 6.51</li><li>Second Year :- 7.36</li><li>Third Year :- 7.9</li></ul><br><ul><li>CPI :- <b>7.63</b></li></ul>
+    detail: In 2019 will complete my graduation as a Bachelor of Technology in Computer Science and Enginnering. <br><ul><li>First Year :- 6.51</li><li>Second Year :- 7.36</li><li>Third Year :- 7.9</li><li>Final Year :- 8.96</li></ul><br><ul><li>CPI :- <b>8.08</b></li></ul>
     i18n: company_c_desc
   date:
     detail: July. 2019
