--- a/_data/landing.yml
+++ b/_data/landing.yml
@@ -34,7 +34,7 @@
   i18n: nav.blog
   name: Blog
   tpl: blog.html
-  page: blogs/index.html
+  page: https://blog.saurabhlondhe.com/
   css: testimonials navy-section
 
 - id: links
