--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:  # change following line to your infomation.
     - name: icon-docker
     - name: icon-shell
 
-  desc: President of RIT India Linux Users' Group | Red Hat Certified Engineer | Red Hat Certified System Administrator | Open Source Contributor | Linux User | Python lover  # Describe yourself.
+  desc: Ex President of RIT India Linux Users' Group | Red Hat Certified Engineer | Red Hat Certified System Administrator | Open Source Contributor | Linux User | Python lover  # Describe yourself.
 
 # comment
 #disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
