--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -5,23 +5,37 @@
     i18n: company_a
     logo: /static/assets/img/landing/emtec.png
   desc:
-    detail: Working as a Trainee Software Developer. Working on technologies like Spring boot, AWS, Docker Compose, etc.
+    detail: Worked on complex utilities wriitten in Python. Working on technologies like Spring boot, AWS, Docker Compose, etc.
     i18n: company_a_desc
   date:
-    detail: Jun. 2019 - present
+    detail: Sept. 2019 - present
     i18n: company_a_date
   job:
-    detail: Trainee Software developer
+    detail: Associate Software developement Engineer
     i18n: company_a_job
-  icon: fa icon-java
-
+  icon: fa icon-python
 
 - name:
     detail: Emtec Inc.
     i18n: company_a
     logo: /static/assets/img/landing/emtec.png
   desc:
-    detail: Worked as an Intern for software development. Worked on various technologies like Angular, AWS, AZURE, Docker, Spring Boot, etc.. 
+    detail: Working as a Trainee Software Developer. Working on technologies like Spring boot, AWS, Docker Compose, etc.
+    i18n: company_a_desc
+  date:
+    detail: Jun. 2019 - Sept. 2019
+    i18n: company_a_date
+  job:
+    detail: Trainee Software developer
+    i18n: company_a_job
+  icon: fa icon-java
+
+- name:
+    detail: Emtec Inc.
+    i18n: company_a
+    logo: /static/assets/img/landing/emtec.png
+  desc:
+    detail: Worked as an Intern for software development. Worked on various technologies like Angular, AWS, AZURE, Docker, Spring Boot, etc..
     i18n: company_a_desc
   date:
     detail: Dec. 2018 - May. 2019
