#7 closing: removed certificate link 🔗

--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,7 +1,6 @@
 # links section data
 - last_name: Londhe
   first_name: Saurabh
-  desc: Trainee Software Developer
+  desc: Associate Software Developer
   website: https://saurabhlondhe.com
   email: saurabhlondhe1111@gmail.com
-  certs: /certificates
