--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -5,7 +5,7 @@
     i18n: company_a
     logo: /static/assets/img/landing/emtec.png
   desc:
-    detail: Worked on complex utilities written in Python. Working on technologies like Spring boot, AWS, Docker Compose, etc.
+    detail: Worked on complex utilities written in Python. Working on technologies like React, Spring boot, AWS, Docker Compose, etc.
     i18n: company_a_desc
   date:
     detail: Sept. 2019 - present
@@ -13,7 +13,7 @@
   job:
     detail: Associate Software developement Engineer
     i18n: company_a_job
-  icon: fa icon-python
+  icon: fa icon-reactjs
 
 - name:
     detail: Emtec Inc.
