--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,6 +1,14 @@
 # projects section data
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
+
+- name: Chess
+  i18n: Chess
+  gh_user: saurabhlondhe
+  repo: chess
+  img: /static/assets/img/landing/chess.png
+  desc: Chess game made in Reach and Python
+
 - name: Server-Suite
   i18n: server_suite
   gh_user: Server-Suite
