--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -1,6 +1,6 @@
 # skills section data
 
 label: Ability
-id : cs
-aspects: Linux/Shell, Git, C#, HTML5, JavaScript, Angular, PyQt, AWS, Python, Docker, Xenserver, Ansible, Elm, PostgreSQL, Java, Terraform
-percentage: 75, 90, 80, 75, 80, 75, 80, 70, 85, 70, 80, 50, 75, 60, 70, 70
+id: cs
+aspects: Linux/Shell, Git, C#, HTML5,React, JavaScript, Angular, PyQt, AWS, Python, Docker, Xenserver, Ansible, Elm, PostgreSQL, Java, Terraform
+percentage: 75, 90, 80, 85,75, 80, 75, 80, 70, 85, 70, 80, 50, 75, 60, 70, 70
